--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,6 +12,9 @@
     <action
         android:id="@+id/action_hitungFragment_to_saranFragment"
         app:destination="@id/saranFragment" />
+    <action
+        android:id="@+id/action_hitungFragment_to_aboutFragment"
+        app:destination="@id/aboutFragment" />
     <fragment
         android:id="@+id/saranFragment"
         android:name="org.d3if4076.modul5.ui.SaranFragment"
@@ -20,6 +23,12 @@
         <argument
             android:name="kategori"
             app:argType="org.d3if4076.modul5.data.KategoriBmi" />
+        <fragment
+            android:id="@+id/aboutFragment"
+            android:name="com.indraazimi.hitungbmi.ui.AboutFragment"
+            android:label="@string/tentang_aplikasi"
+            tools:layout="@layout/fragment_about"/>
+
     </fragment>
 
 </navigation>
