--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/hitungFragment">
     <fragment
         android:id="@+id/hitungFragment"
-        android:name="org.d3if4076.modul5.ui.HitungFragment"
+        android:name="org.d3if4076.modul5.ui.hitung.HitungFragment"
         android:label="HitungFragment"
         tools:layout="@layout/fragment_hitung"/>
     <action
@@ -25,7 +25,7 @@
             app:argType="org.d3if4076.modul5.data.KategoriBmi" />
         <fragment
             android:id="@+id/aboutFragment"
-            android:name="com.indraazimi.hitungbmi.ui.AboutFragment"
+            android:name="org.d3if4076.modul5.ui.hitung.AboutFragment"
             android:label="@string/tentang_aplikasi"
             tools:layout="@layout/fragment_about"/>
 
